--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
   <body>
     <div class="page">
-      <!-- Wrap the entire page content in a new div with the page class. Remember to add the closing tag -->
       <header class="header">
         <nav class="nav">
           <img
@@ -19,7 +18,6 @@
             alt="Triple Peaks Library Logo"
             class="nav__logo"
           />
-          <!-- Putting navigation links in a list is supposed to be the best practice of writing the semantic code since it allows screen readers to pause between each link instead of reading all the links as a sentence. -->
           <ul class="nav__links">
             <li>
               <a class="nav__link">Staff picks</a>
@@ -139,170 +137,204 @@
         </section>
 
         <section class="staff">
-          <!-- --------------------------------------------------------------- -->
-          <!--        Don't uncomment until the final project stage            -->
-          <!-- --------------------------------------------------------------- -->
-          <!--<h2 class="staff__title">Staff picks</h2>
-        <p class="staff__subtitle">That our readers love</p>
-        <ul>
-          <li class="card">
-            <div class="card__content">
-              <h3 class="card__title">Introduction to Algorithms</h3>
-              <p class="card__text">
-                The name of this book is self-explanatory; it's a proper
-                introduction to algorithms! Introduction to Algorithms, or CLRS,
-                in reference to the authors' last names, goes in-depth and
-                covers a range of algorithms across several self-contained
-                chapters.
-              </p>
-              <p class="card__footer">
-                Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest,
-                Clifford Stein
-              </p>
-            </div>
-          </li>
+          id="staff-picks">
+          <h2 class="staff__title">Staff picks</h2>
+          <p class="staff__subtitle">That our readers love</p>
+          <ul class="staff__cards">
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">Introduction to Algorithms</h3>
+                <p class="card__text">
+                  The name of this book is self-explanatory; it's a proper
+                  introduction to algorithms! Introduction to Algorithms, or
+                  CLRS, in reference to the authors' last names, goes in-depth
+                  and covers a range of algorithms across several self-contained
+                  chapters.
+                </p>
+                <p class="card__footer">
+                  Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest,
+                  Clifford Stein
+                </p>
+              </div>
+            </li>
 
-          <li class="card">
-            <div class="card__content">
-              <h3 class="card__title">
-                The Structure and Interpretation of Computer Programs (SICP)
-              </h3>
-              <p class="card__text">
-                This is one of the best books for learning the fundamentals of
-                programming. Featured by MIT in one of their foundational
-                programming courses, SICP is a general-purpose programming book
-                that uses Scheme to illustrate various programming concepts.
-              </p>
-              <p class="card__footer">
-                Harold Abelson, Gerald Jay Sussman, Julie Sussman
-              </p>
-            </div>
-          </li>
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">
+                  The Structure and Interpretation of Computer Programs (SICP)
+                </h3>
+                <p class="card__text">
+                  This is one of the best books for learning the fundamentals of
+                  programming. Featured by MIT in one of their foundational
+                  programming courses, SICP is a general-purpose programming
+                  book that uses Scheme to illustrate various programming
+                  concepts.
+                </p>
+                <p class="card__footer">
+                  Harold Abelson, Gerald Jay Sussman, Julie Sussman
+                </p>
+              </div>
+            </li>
 
-          <li class="card">
-            <div class="card__content">
-              <h3 class="card__title">
-                The Clean Coder: A Code of Conduct for Professional Programmers
-              </h3>
-              <p class="card__text">
-                Compiled by seasoned software engineer and author Robert C.
-                Martin (also known as Uncle Bob), this book covers the
-                techniques and tools of true software craftsmanship. It explains
-                how to write clean code and demonstrates how to cultivate the
-                attitude of a skilled, professional programmer.
-              </p>
-              <p class="card__footer">Steve McConnell</p>
-            </div>
-          </li>
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">
+                  The Clean Coder: A Code of Conduct for Professional
+                  Programmers
+                </h3>
+                <p class="card__text">
+                  Compiled by seasoned software engineer and author Robert C.
+                  Martin (also known as Uncle Bob), this book covers the
+                  techniques and tools of true software craftsmanship. It
+                  explains how to write clean code and demonstrates how to
+                  cultivate the attitude of a skilled, professional programmer.
+                </p>
+                <p class="card__footer">Steve McConnell</p>
+              </div>
+            </li>
 
-          <li class="card">
-            <div class="card__content">
-              <h3 class="card__title">
-                Code Complete: A Practical Handbook of Software Construction
-              </h3>
-              <p class="card__text">
-                Want to know how to write robust code irrespective of the
-                architecture behind your chosen programming language? Then
-                consider reading Code Complete: A Practical Handbook of Software
-                Construction. It comprehensively covers everything related to
-                good code structure.
-              </p>
-              <p class="card__footer">Steve McConnell</p>
-            </div>
-          </li>
-        </ul>-->
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">
+                  Code Complete: A Practical Handbook of Software Construction
+                </h3>
+                <p class="card__text">
+                  Want to know how to write robust code irrespective of the
+                  architecture behind your chosen programming language? Then
+                  consider reading Code Complete: A Practical Handbook of
+                  Software Construction. It comprehensively covers everything
+                  related to good code structure.
+                </p>
+                <p class="card__footer">Steve McConnell</p>
+              </div>
+            </li>
+          </ul>
         </section>
 
-        <section class="membership">
-          <!-- --------------------------------------------------------------- -->
-          <!--         Don't uncomment until the final project stage           -->
-          <!-- --------------------------------------------------------------- -->
-          <!--<h2 class="membership__title">Becoming a library member is easy!</h2>
-        <ul class="membership__steps">
-          <li class="step">
-            <h3 class="step__title">
-              Step 1
-              <img
-                src="./images/icon_step_forward.svg"
-                alt="icon forward"
-                class="step__icon"
-              />
-            </h3>
-            <p class="step__description">
-              Fill out the membership form online or in person.
-            </p>
-          </li>
-          <li class="step">
-            <h3 class="step__title">
-              Step 2
-              <img
-                src="./images/icon_step_forward.svg"
-                alt="icon forward"
-                class="step__icon"
-              />
-            </h3>
-            <p class="step__description">
-              Come pick up your library card at the front desk.
-            </p>
-          </li>
-          <li class="step">
-            <h3 class="step__title">
-              Step 3
-              <img
-                src="./images/icon_step_forward.svg"
-                alt="icon forward"
-                class="step__icon"
-              />
-            </h3>
-            <p class="step__description">Sign the back of the card.</p>
-          </li>
-          <li class="step">
-            <h3 class="step__title">
-              Step 4
-              <img
-                src="./images/icon_step_finish.svg"
-                alt="icon finish"
-                class="step__icon"
-              />
-            </h3>
-            <p class="step__description">
-              Enjoy all the awesome benefits of membership!
-            </p>
-          </li>
-        </ul>-->
+        <section class="membership" id="become-a-member">
+          <h2 class="membership__title">Becoming a library member is easy!</h2>
+          <ul class="membership__steps">
+            <li class="step">
+              <h3 class="step__title">
+                Step 1
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Fill out the membership form online or in person.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Step 2
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Come pick up your library card at the front desk.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Step 3
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">Sign the back of the card.</p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Step 4
+                <img
+                  src="./images/icon_step_finish.svg"
+                  alt="icon finish"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Enjoy all the awesome benefits of membership!
+              </p>
+            </li>
+          </ul>
         </section>
 
-        <section class="about">
-          <!-- --------------------------------------------------------------- -->
-          <!--          Don't uncomment until the final project stage          -->
-          <!-- --------------------------------------------------------------- -->
-          <!--<h2 class="about__title">About the library</h2>
-        <div class="about__content">
-          <p class="about__paragraph">
-            Libraries are essential establishments in practically every city,
-            and the Triple Peaks Library is no exception. It first opened its
-            doors way back in 2018, right as our humble town began bidding
-            welcome to its very first citizens!
-          </p>
-          <p class="about__paragraph">
-            Since its initial opening, the library has seen nearly 342 monthly
-            visitors. That's almost 50% of our population! So far, most
-            citizens have enjoyed reading books and using our ample online
-            resources.
-          </p>
-          <p class="about__paragraph">
-            Become a member today, and make sure to check out our Staff Picks
-            section. This week's selection is full of books anyone interested
-            in computer programming would love!
-          </p>
-        </div>
-        <div class="about__circle"></div> -->
+        <section class="about" id="about">
+          <h2 class="about__title">About the library</h2>
+          <div class="about__content">
+            <p class="about__paragraph">
+              Libraries are essential establishments in practically every city,
+              and Practicum's library is no exception. It first opened its doors
+              way back in 2018, right as our humble town began bidding welcome
+              to its very first citizens!
+            </p>
+            <p class="about__paragraph">
+              Since its initial opening, the library has seen nearly 342
+              visitors each month. That's almost 50% of our population! So far,
+              most citizens have enjoyed reading books and making use of our
+              ample online resources.
+            </p>
+            <p class="about__paragraph">
+              The library gets its name from Joan Feynman, an American
+              astrophysicist and the first woman to be elected as an officer of
+              the American Geophysical Union.
+            </p>
+          </div>
+          <div class="about__circle"></div>
         </section>
       </main>
-      <footer class="footer">
-        <!-- ----------------------------------------------------------------- -->
-        <!--          Don't uncomment until the final project stage            -->
-        <!-- ----------------------------------------------------------------- -->
+
+      <footer class="footer" id="contacts">
+        <div class="footer__columns">
+          <div class="footer__column">
+            <img
+              src="images\logo_white.svg"
+              alt="Triple Peaks Logo White"
+              class="footer__logo"
+            />
+          </div>
+          <div class="footer__column footer__column_content_hours">
+            <h2 class="footer__column-heading">Hours</h2>
+            <ul class="footer__list">
+              <li class="footer__list-item">Weekdays: 9am - 8pm</li>
+              <li class="footer__list-item">Weekends: 10am - 6pm</li>
+            </ul>
+          </div>
+          <div class="footer__column footer__column_content_social">
+            <h2 class="footer__column-heading">Social Media</h2>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a href="#" class="footer__column-link">
+                  <img
+                    src="images/facebook_white.svg"
+                    alt="Facebook Logo"
+                    class="footer__social-icon"
+                  />
+                  Facebook
+                </a>
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__column-link">
+                  <img
+                    src="images\instagram_white.svg"
+                    alt="Instagram Logo"
+                    class="footer__social-icon"
+                  />
+                  Instagram
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">© 2023 Damian Tereda</p>
       </footer>
     </div>
   </body>
