--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         <div class="footer__columns">
           <div class="footer__column">
             <img
-              src="images\logo_white.svg"
+              src="images/logo_white.svg"
               alt="Triple Peaks Logo White"
               class="footer__logo"
             />
@@ -324,7 +324,7 @@
               <li class="footer__list-item">
                 <a href="#" class="footer__column-link">
                   <img
-                    src="images\instagram_white.svg"
+                    src="images/instagram_white.svg"
                     alt="Instagram Logo"
                     class="footer__social-icon"
                   />
