--- a/index.html
+++ b/index.html
@@ -135,27 +135,27 @@
             </div>
           </div>
         </section>
-
         <section class="staff" id="staff-picks"></section>
-          <h2 class="staff__title">Staff picks</h2>
-          <p class="staff__subtitle">That our readers love</p>
-          <ul class="staff__cards">
-            <li class="card">
-              <div class="card__content">
-                <h3 class="card__title">Introduction to Algorithms</h3>
-                <p class="card__text">
-                  The name of this book is self-explanatory; it's a proper
-                  introduction to algorithms! Introduction to Algorithms, or
-                  CLRS, in reference to the authors' last names, goes in-depth
-                  and covers a range of algorithms across several self-contained
-                  chapters.
-                </p>
-                <p class="card__footer">
-                  Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest,
-                  Clifford Stein
-                </p>
-              </div>
-            </li>
+        <h2 class="staff__title">Staff picks</h2>
+        <p class="staff__subtitle">That our readers love</p>
+        <ul class="staff__cards">
+          <li class="staff__card">
+            <div class="staff__card-content">
+              <h3 class="staff__card-title">Introduction to Algorithms</h3>
+              <p class="staff__card-text">
+                The name of this book is self-explanatory; it's a proper
+                introduction to algorithms! Introduction to Algorithms, or
+                CLRS, in reference to the authors' last names, goes in-depth
+                and covers a range of algorithms across several self-contained
+                chapters.
+              </p>
+              <p class="staff__card-footer">
+                Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest,
+                Clifford Stein
+              </p>
+            </div>
+          </li>
+        </ul>
 
             <li class="card">
               <div class="card__content">
