Commit 7/3/2023 last attempt before redoing entire

--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
           <h2 class="staff__title">Staff picks</h2>
           <p class="staff__subtitle">That our readers love</p>
           <ul class="staff__cards">
-            <li class="card__card">
-              <div class="card__card-content">
-                <h3 class="card__card-title">Introduction to Algorithms</h3>
-                <p class="card__card-text">
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">Introduction to Algorithms</h3>
+                <p class="card__text">
                   The name of this book is self-explanatory; it's a proper
                   introduction to algorithms! Introduction to Algorithms, or
                   CLRS, in reference to the authors' last names, goes in-depth
