--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <section class="staff" id="staff-picks">
           <h2 class="staff__title">Staff picks</h2>
           <p class="staff__subtitle">That our readers love</p>
-          <ul class="staff__cards">
+          <ul class="staff__cards"></ul>
             <li class="card">
               <div class="card__content">
                 <h3 class="card__title">Introduction to Algorithms</h3>
@@ -153,7 +153,7 @@
               </div>
             </li>
 
-          <ul>
+
 
             <li class="card">
               <div class="card__content">
